--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -1,4 +1,13 @@
-﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06" mc:Ignorable="d" Title="Aplicacion" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent" Style="{StaticResource SpecialTextControl}" Height="678">
+﻿<wpf1:Window x:Name="WindowVar" x:Class="Gestion_AcademicoAdministrativa_Abastos.MainWindow"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:wpf1="http://schemas.microsoft.com/xps/2005/06"
+             mc:Ignorable="d" Title="Aplicacion"
+             WindowStartupLocation="CenterScreen"
+             WindowStyle="None" AllowsTransparency="True" Background="Transparent"
+             Style="{StaticResource WindowStyle}" Height="678">
     <Window.Effect>
         <DropShadowEffect BlurRadius="10" ShadowDepth="0" Direction="-45" RenderingBias="Quality" Opacity="0.35" />
     </Window.Effect>
