--- a/Gestion_AcademicoAdministrativa_Abastos/Notification.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Notification.xaml
@@ -39,7 +39,8 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="1" Grid.Column="1" x:Name="WindowContent"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                   Text="{Binding NotificationContent}" Padding="0" Height="Auto"/>
+                   Text="{Binding NotificationContent}" Padding="0" Height="Auto"
+                       Style="{StaticResource NotificationContent}"/>
         </Grid>
     </Grid>
 </Window>
