--- a/Gestion_AcademicoAdministrativa_Abastos/styles/Button.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/styles/Button.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.styles">
+                    xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos">
     <Style TargetType="Button" x:Key="basicButton" BasedOn="{StaticResource SpecialTextControl}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
-        <Setter Property="Foreground" Value="{DynamicResource MainColorSolid}" />
+        <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
         <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
         <Setter Property="FontFamily" Value="{DynamicResource StandardFontFamily}" />
         <Setter Property="Template">
@@ -66,10 +66,8 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
-    <Style TargetType="Button" BasedOn="{StaticResource basicButton}">
-        <Setter Property="Foreground" Value="Black" />
-    </Style>
+
+    <Style TargetType="Button" BasedOn="{StaticResource basicButton}" />
 
     <Style x:Key="MenuButton" TargetType="Button" BasedOn="{StaticResource basicButton}">
         <Setter Property="Template">
@@ -82,6 +80,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource SelectionColorSolid}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
