--- a/Gestion_AcademicoAdministrativa_Abastos/CustomElements/Reclamacion.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/CustomElements/Reclamacion.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Reclamacion" Height="450" Width="800">
     <Grid>
-        <Grid Background="{DynamicResource MainColorSolid}">
+        <Grid Background="{DynamicResource MainColorSolid}" x:Name="MainGridContent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="20*" />
                 <RowDefinition Height="80*" />
