--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
-             StartupUri="CustomElements/Reclamacion.xaml">
+             StartupUri="SplashScreen.xaml">
+             <!--StartupUri="CustomElements/Reclamacion.xaml"-->
     <Application.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries >
@@ -12,11 +13,11 @@
                 <ResourceDictionary Source="styles/DataGrid.xaml"/>
                 <ResourceDictionary Source="styles/ScrollBar.xaml"/>
                 <ResourceDictionary Source="styles/Button.xaml"/>
+                <ResourceDictionary Source="styles/ProgressBar.xaml"/>
                 <ResourceDictionary Source="styles/Text.xaml"/>
                 <ResourceDictionary Source="styles/Reclamacion.xaml"/>
                 <ResourceDictionary Source="styles/ContextMenu.xaml"/>
                 <ResourceDictionary Source="styles/Slider.xaml"/>
-                <ResourceDictionary Source="styles/ProgressBar.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
