--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -29,7 +29,7 @@
             </Grid.RowDefinitions>
             <Label x:Name="WindowTitle" Grid.Column="0"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                   Content="{Binding NotificationTitle}" Padding="0"
+                   Content="{Binding ApplicationTitle}" Padding="0"
                    FontSize="{DynamicResource TitleFontSize}" />
             <Grid Grid.Column="1" HorizontalAlignment="Right" Width="75" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
