--- a/Gestion_AcademicoAdministrativa_Abastos/ViewSelector.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/ViewSelector.xaml
@@ -4,9 +4,39 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
+        AllowsTransparency="True" WindowStyle="None" Background="Transparent"
         mc:Ignorable="d"
-        Title="ViewSelector" Height="450" Width="800">
-    <Grid>
-        
+        Title="ViewSelector" Height="450" Width="800"
+        Topmost="True" WindowStartupLocation="CenterScreen">
+    <Grid Background="{DynamicResource MainColorSolid}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="80*" />
+        </Grid.RowDefinitions>
+        <Grid x:Name="TopBar" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="Auto" MouseDown="TopBar_MouseDown" Background="{DynamicResource TopBarGradient}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="95*" />
+            </Grid.RowDefinitions>
+            <Label Padding="0" x:Name="WindowTitle" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Selecciona la vista a cargar" />
+            <Grid Grid.Column="1" HorizontalAlignment="Right" Width="25" VerticalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100*" />
+                </Grid.ColumnDefinitions>
+                <Button x:Name="BtnCerrar" Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{StaticResource MenuButton}" />
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="90*" />
+                <ColumnDefinition Width="5*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="90*" />
+                <RowDefinition Height="10*" />
+            </Grid.RowDefinitions>
+            <ComboBox x:Name="ComboBoxViewSelector" Grid.Column="1" Grid.Row="1" SelectionChanged="ComboBoxViewSelector_SelectionChanged"/>
+        </Grid>
     </Grid>
 </Window>
