Add All Permisos de Usuario To Grid

--- a/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
@@ -35,7 +35,7 @@
                             
                         </TabItem>
                         <TabItem Header="Permisos de Usuario">
-                            <DataGrid x:Name="DataGridResult" AutoGenerateColumns="True" ColumnWidth="Auto">
+                            <DataGrid x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*">
 
                             </DataGrid>
                         </TabItem>
