--- a/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
@@ -35,9 +35,57 @@
                             
                         </TabItem>
                         <TabItem Header="Permisos de Usuario">
-                            <DataGrid x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*">
-
-                            </DataGrid>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="30*" />
+                                    <RowDefinition Height="10*" />
+                                    <RowDefinition Height="60*" />
+                                </Grid.RowDefinitions>
+                                <Grid Margin="15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid Grid.Column="0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="15*" />
+                                            <RowDefinition Height="20*" />
+                                            <RowDefinition Height="15*" />
+                                            <RowDefinition Height="40*" />
+                                        </Grid.RowDefinitions>
+                                        <Label Grid.Row="0" Content="Nombre" />
+                                        <TextBox Grid.Row="1" x:Name="TxtNombre" />
+                                        <Label Grid.Row="2" Content="Descripcion" />
+                                        <TextBox Grid.Row="3" x:Name="TxtDescripcion" Padding="15,15,0,0" VerticalContentAlignment="Top"/>
+                                    </Grid>
+                                    <Grid Grid.Column="1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="25*" />
+                                            <RowDefinition Height="25*" />
+                                            <RowDefinition Height="25*" />
+                                            <RowDefinition Height="25*" />
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="25*" />
+                                            <ColumnDefinition Width="50*" />
+                                            <ColumnDefinition Width="25*" />
+                                        </Grid.ColumnDefinitions>
+                                        <CheckBox Grid.Column="1" Grid.Row="0" Content="Permiso de Administrador" />
+                                        <CheckBox Grid.Column="1" Grid.Row="1" Content="Permiso de Administrativo" />
+                                        <CheckBox Grid.Column="1" Grid.Row="2" Content="Permiso de Profesor" />
+                                        <CheckBox Grid.Column="1" Grid.Row="3" Content="Permiso de Alumno" />
+                                    </Grid>
+                                </Grid>
+                                <Grid Grid.Row="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="25*" />
+                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="25*" />
+                                    </Grid.ColumnDefinitions>
+                                <Button Grid.Column="1" x:Name="CreatePermisoButton" Content="Crear Permiso" />
+                                </Grid>
+                                <DataGrid Grid.Row="2" x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*" />
+                            </Grid>
                         </TabItem>
                     </TabControl>
                 </Grid>
