--- a/Gestion_AcademicoAdministrativa_Abastos/BuscadorPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/BuscadorPersona.xaml
@@ -62,7 +62,7 @@
                                 <ColumnDefinition Width="25*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="1" Content="Número de Filas"/>
-                            <TextBox Grid.Column="2" Text="{Binding Step}"/>
+                            <TextBox x:Name="TxtStep" Grid.Column="2" Text="{Binding Step}" PreviewTextInput="TxtStep_PreviewTextInput" TextChanged="TxtStep_TextChanged"/>
                         </Grid>
                         <DataGrid x:Name="DataGridResult" Grid.Row="5" AutoGenerateColumns="True" ColumnWidth="Auto" />
                         <Grid Grid.Row="7">
