--- a/Gestion_AcademicoAdministrativa_Abastos/BuscadorPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/BuscadorPersona.xaml
@@ -65,6 +65,24 @@
                             <TextBox x:Name="TxtStep" Grid.Column="2" Text="{Binding Step}" PreviewTextInput="TxtStep_PreviewTextInput" TextChanged="TxtStep_TextChanged"/>
                         </Grid>
                         <DataGrid x:Name="DataGridResult" Grid.Row="5" AutoGenerateColumns="True" ColumnWidth="Auto" />
+                        <Grid Grid.Row="6" >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="5*" />
+                                <ColumnDefinition Width="15*" />
+                                <ColumnDefinition Width="10*" />
+                                <ColumnDefinition Width="15*" />
+                                <ColumnDefinition Width="5*" />
+                                <ColumnDefinition Width="5*" />
+                                <ColumnDefinition Width="5*" />
+                                <ColumnDefinition Width="5*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="1" Content="Número de filas: "/>
+                            <Label Grid.Column="2" x:Name="LabelNumRows"/>
+                            <Label Grid.Column="3" Content="Mostrando rango: " />
+                            <Label Grid.Column="4" x:Name="LabelStartIndex" HorizontalAlignment="Center" Padding="0"/>
+                            <Label Grid.Column="5" Content="-"  HorizontalAlignment="Center" Padding="0"/>
+                            <Label Grid.Column="6" x:Name="LabelEndIndex" HorizontalAlignment="Center" Padding="0"/>
+                        </Grid>
                         <Grid Grid.Row="7">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="35*" />
