--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.xaml
@@ -8,6 +8,7 @@
              WindowStartupLocation="CenterScreen"
              WindowStyle="None" AllowsTransparency="True" Background="Transparent"
              Style="{StaticResource WindowStyle}" Height="678"
+             Topmost="True" Activated="WindowVar_Activated"
              Closing="Window_Closing">
     <Window.Effect>
         <DropShadowEffect BlurRadius="10" ShadowDepth="0" Direction="-45" RenderingBias="Quality" Opacity="0.35" />
